<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UrChat</string>
    <string name="app_desc">An Easy Chat App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_me">Me</string>
    <string name="fragment_contact">Contacts</string>
    <string name="fragment_message">Message</string>
    <string name="_00_00">00:00</string>
    <string name="title">title</string>
    <string name="message">message</string>
    <string name="NotFinished">Not yet finished!</string>
    <string name="_404">Not Found</string>
    <string name="_500">Client Error</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="send_message">Send</string>
    <string name="make_a_video_all">Make a video all</string>
    <string name="input_message">Input Message</string>
    <string name="send_failed">Send failed</string>
    <string name="uname_pwd_too_short">The password and username cannot be less than 6 digits</string>
    <string name="search">Search</string>
    <string name="sharp">#</string>
    <string name="logged_out">log out</string>
    <string name="server_ip">server</string>
    <string name="server_port">port</string>
    <string name="ip_error">Ip has error</string>
    <string name="you">you</string>
    <string name="picture">picture</string>
    <string name="select">select</string>
    <string name="camera">camera</string>
    <string name="delete">delete</string>
    <string name="history">history</string>
    <string name="newfriend">new friend</string>
    <string name="system">system</string>
    <string name="update_info">Update info</string>
    <string name="title_activity_new_friend">NewFriendActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="location">location</string>
    <string name="input_uname">Input uname</string>
    <string name="input_display_name">Input display name</string>
    <string name="send_request">Add as a friend</string>
    <string name="send_success">Send Success</string>
    <string name="uname_too_short">uname is too short</string>
    <string name="positive">positive</string>
    <string name="nagetive">nagetive</string>
    <string name="waitting">waiting for server</string>
    <string name="submit">submit</string>
    <string name="cancel">Cancel</string>
    <string name="change_icon">Click to change icon</string>
    <string name="info">info</string>
    <string name="update_password">Re-login after password modification to re-enter</string>
    <string name="update_positive">Update successful</string>
    <string name="setting">setting</string>
</resources>