<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.InfoActivity">

    <ImageView
        android:id="@+id/activity_info_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_info_img_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/change_icon"
        app:layout_constraintBottom_toTopOf="@+id/activity_info_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/activity_info_display_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/input_display_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_info_img"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/activity_info_new_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_info_display_name"
        android:autofillHints="password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_info_new_password">

        <Button
            android:id="@+id/activity_info_commit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleToggle" />

        <Button
            android:id="@+id/activity_info_exit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleToggle" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>